Fix cards layout issues by reverting back to freewall library.

--- a/app/account/styles/_card.styl
+++ b/app/account/styles/_card.styl
@@ -9,7 +9,6 @@ $cardGutter = 15px;
   cursor: pointer;
   float: left;
   height: $cardHeight;
-  margin-bottom: $cardGutter;
   position: relative;
   overflow: hidden;
   width: $cardWidth;
